--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,7 +25,12 @@
     <dimen name="main_list_title_size">18sp</dimen>
     <dimen name="main_list_center_title_size">24sp</dimen>
     <dimen name="main_list_comment_size">14sp</dimen>
-    <dimen name="main_list_time">80dp</dimen>
-    <dimen name="main_list_time_size">14sp</dimen>
+    <dimen name="main_list_time">50dp</dimen>
+    <dimen name="main_list_time_size">12sp</dimen>
+    <dimen name="time_mask_height">32dp</dimen>
+    <dimen name="time_normal_text">14sp</dimen>
+    <dimen name="time_select_text">22sp</dimen>
+    <dimen name="time_unit_height">50dp</dimen>
+    <dimen name="time_picker_height">200dp</dimen>
 
 </resources>
