--- a/app/src/main/res/layout/layout_time_picker.xml
+++ b/app/src/main/res/layout/layout_time_picker.xml
@@ -10,8 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginStart="@dimen/normal_inner_space"
-        android:layout_marginEnd="@dimen/normal_inner_space"
+        android:layout_marginLeft="@dimen/normal_inner_space"
+        android:layout_marginRight="@dimen/normal_inner_space"
         android:text="@string/str_start_time"
         android:textSize="@dimen/time_select_text"
         />
@@ -57,8 +57,8 @@
         android:layout_width="@dimen/button_little_width"
         android:layout_height="@dimen/button_layout_height"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="@dimen/normal_horizontal_margin"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="@dimen/normal_horizontal_margin"
         android:layout_marginTop="@dimen/normal_inner_space"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:src="@drawable/ic_arrow_back_black_36dp"
@@ -68,10 +68,10 @@
         android:id="@+id/icon_save"
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_layout_height"
-        android:layout_toEndOf="@id/icon_back"
+        android:layout_toRightOf="@id/icon_back"
         android:layout_alignBottom="@id/icon_back"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/normal_horizontal_margin"
+        android:layout_marginRight="@dimen/normal_horizontal_margin"
         android:background="@drawable/selector_save_btn"
         android:text="@string/str_save"/>
 
