--- a/app/src/main/res/layout/time_picker.xml
+++ b/app/src/main/res/layout/time_picker.xml
@@ -13,8 +13,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_marginStart="@dimen/normal_inner_space"
-        android:layout_marginEnd="@dimen/normal_inner_space"
+        android:layout_marginLeft="@dimen/normal_inner_space"
+        android:layout_marginRight="@dimen/normal_inner_space"
         app:itemNumber="3"
         app:lineColor="@color/color_time_line"
         app:maskHight="@dimen/time_mask_height"
@@ -38,8 +38,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_marginStart="@dimen/normal_inner_space"
-        android:layout_marginEnd="@dimen/normal_inner_space"
+        android:layout_marginLeft="@dimen/normal_inner_space"
+        android:layout_marginRight="@dimen/normal_inner_space"
         app:itemNumber="3"
         app:lineColor="@color/color_time_line"
         app:maskHight="@dimen/time_mask_height"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:text="@string/str_day"
         android:textSize="@dimen/time_normal_text"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         />
 
     <com.dreamfly.widget.WheelView
@@ -63,8 +63,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/normal_inner_space"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/normal_inner_space"
         app:itemNumber="3"
         app:lineColor="@color/color_time_line"
         app:maskHight="@dimen/time_mask_height"
@@ -87,8 +87,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_marginStart="@dimen/normal_inner_space"
-        android:layout_marginEnd="@dimen/normal_inner_space"
+        android:layout_marginLeft="@dimen/normal_inner_space"
+        android:layout_marginRight="@dimen/normal_inner_space"
         app:itemNumber="3"
         app:lineColor="@color/color_time_line"
         app:maskHight="@dimen/time_mask_height"
