--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
     <color name="color_item_line_blue">#FF046d9e</color>
     <color name="color_back_bg_normal">#FF32BEFF</color>
     <color name="color_back_bg_pressed">#5532BEFF</color>
@@ -9,14 +10,15 @@
     <color name="color_save_bg_pressed">#5521e14e</color>
     <color name="color_del_bg_normal">#FF97a49a</color>
     <color name="color_del_bg_pressed">#5597a49a</color>
+    <color name="color_main_title">#161515</color>
     <color name="color_main_time">#000000</color>
-    <color name="color_first_level">#af4343</color>
+    <color name="color_first_level">#dde15454</color>
     <color name="color_first_level_pressed">#55af4343</color>
-    <color name="color_second_level">#3a973e</color>
+    <color name="color_second_level">#dd3c9e3f</color>
     <color name="color_second_level_pressed">#553a973e</color>
-    <color name="color_third_level">#a14585</color>
+    <color name="color_third_level">#ddd157ac</color>
     <color name="color_third_level_pressed">#55a14585</color>
-    <color name="color_fourth_level">#9ea7a5</color>
+    <color name="color_fourth_level">#dd9ea7a5</color>
     <color name="color_fourth_level_pressed">#558f9392</color>
     <color name="gray_normal">#ccc7c7</color>
     <color name="color_time_line">#ff5789DC</color>
