--- a/app/src/main/res/layout/layout_recy_tasks.xml
+++ b/app/src/main/res/layout/layout_recy_tasks.xml
@@ -1,43 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/id_drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
-    <LinearLayout
-        android:id="@+id/ly_addtask"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/normal_horizontal_margin"
-        android:layout_marginRight="@dimen/normal_horizontal_margin"
-        android:layout_marginTop="@dimen/normal_vertical_margin"
-        android:layout_marginBottom="@dimen/normal_vertical_margin"
-        android:orientation="horizontal">
-        <com.dreamfly.timeschedule.view.widget.EditTextWithDel
-            android:id="@+id/main_edit_task"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/textedit_height"
-            android:layout_weight="6"
-            android:background="@drawable/main_edit_task"
-            android:layout_gravity="center_vertical"
-            android:singleLine="true"
-            />
-        <ImageView
-            android:id="@+id/main_add"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="@dimen/normal_inner_space"
-            android:background="@drawable/addimg"
-            android:clickable="true"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-    dc
-<!-- 自定义List，添加下拉添加功能 -->
-	<android.support.v7.widget.RecyclerView
-        android:id="@+id/main_list"
+    android:layout_height="match_parent"
+    >
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/ly_addtask"
-        android:scrollbars="vertical"/>
-    
+        >
 
-</RelativeLayout>
+        <LinearLayout
+            android:id="@+id/ly_addtask"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/normal_vertical_margin"
+            android:layout_marginLeft="@dimen/normal_horizontal_margin"
+            android:layout_marginRight="@dimen/normal_horizontal_margin"
+            android:layout_marginTop="@dimen/normal_vertical_margin"
+            android:orientation="horizontal">
+
+            <com.dreamfly.timeschedule.view.widget.EditTextWithDel
+                android:id="@+id/main_edit_task"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/textedit_height"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="6"
+                android:background="@drawable/main_edit_task"
+                android:singleLine="true" />
+
+            <ImageView
+                android:id="@+id/main_add"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/normal_inner_space"
+                android:background="@drawable/addimg"
+                android:clickable="true" />
+        </LinearLayout>
+        <!-- 自定义List，添加下拉添加功能 -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/main_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/ly_addtask"
+            android:scrollbars="vertical" />
+    </RelativeLayout>
+
+    <fragment
+        android:id="@+id/id_left_frag"
+        android:name="com.dreamfly.timeschedule.fragment.LeftFragment"
+        android:layout_width="@dimen/left_layout_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:tag="LEFT"/>
+
+</android.support.v4.widget.DrawerLayout>
