--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,7 @@
     <dimen name="normal_vertical_margin">10dp</dimen>
     <dimen name="normal_vertical_little_margin">2dp</dimen>
     <dimen name="normal_inner_space">6dp</dimen>
-    <dimen name="normal_vertical_card_margin">1dp</dimen>
+    <dimen name="normal_vertical_card_margin">2dp</dimen>
     <dimen name="card_radius">2dp</dimen>
     <dimen name="card_elevation">2dp</dimen>
 
@@ -35,5 +35,7 @@
     <dimen name="time_select_text">22sp</dimen>
     <dimen name="time_unit_height">50dp</dimen>
     <dimen name="time_picker_height">200dp</dimen>
+
+    <dimen name="left_layout_width">200dp</dimen>
 
 </resources>
