[feature]Import PullToRefresh Lib.
[what]引入ptr下拉组件
[why]为了方便后续将RecyclerView扩展下拉

--- a/app/src/main/res/layout/layout_profile.xml
+++ b/app/src/main/res/layout/layout_profile.xml
@@ -15,7 +15,7 @@
         android:textSize="@dimen/main_list_center_title_size"
         android:textColor="@color/black"/>
 
-    <com.dreamfly.timeschedule.view.widget.EditTextWithDel
+    <com.dreamfly.widget.EditTextWithDel
         android:id="@+id/edit_notice"
         android:layout_width="match_parent"
         android:layout_height="@dimen/textedit_large_note_height"
