--- a/app/src/main/res/layout/layout_add_task.xml
+++ b/app/src/main/res/layout/layout_add_task.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.dreamfly.timeschedule.view.widget.EditTextWithDel
+    <com.dreamfly.widget.EditTextWithDel
         android:id="@+id/main_edit_task"
         android:layout_width="match_parent"
         android:layout_height="@dimen/textedit_height"
@@ -206,7 +206,7 @@
         android:layout_margin="@dimen/normal_inner_space"
         android:background="@drawable/shape_rectangle_divider"/>
 
-    <com.dreamfly.timeschedule.view.widget.EditTextWithDel
+    <com.dreamfly.widget.EditTextWithDel
         android:id="@+id/edit_notice"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
