--- a/app/src/main/res/layout/layout_recy_tasks.xml
+++ b/app/src/main/res/layout/layout_recy_tasks.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ptr="http://schemas.android.com/apk/res-auto"
     android:id="@+id/id_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -40,11 +41,14 @@
                 android:clickable="true" />
         </LinearLayout>
         <!-- 自定义List，添加下拉添加功能 -->
-        <android.support.v7.widget.RecyclerView
+        <!--<android.support.v7.widget.RecyclerView-->
+        <com.handmark.pulltorefresh.library.PullToRefreshRecyclerView
             android:id="@+id/main_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/ly_addtask"
+            ptr:ptrMode="pullFromStart"
+            ptr:ptrAnimationStyle="rotate"
             android:scrollbars="vertical" />
     </RelativeLayout>
 
