--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -11,31 +11,27 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/main_list_item_height"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
         android:paddingTop="@dimen/main_list_vertical_margin"
         android:paddingBottom="@dimen/main_list_vertical_margin">
 
         <TextView
             android:id="@+id/month_day"
-            android:layout_width="@dimen/main_list_time"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/normal_inner_space"
             android:layout_alignParentTop="true"
             android:layout_marginTop="@dimen/normal_vertical_little_margin"
-            android:singleLine="true"
             android:textSize="@dimen/main_list_time_size"
             android:textColor="@color/color_main_time"
             />
 
         <TextView
             android:id="@+id/hour_min"
-            android:layout_width="@dimen/main_list_time"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignLeft="@id/month_day"
+            android:layout_alignRight="@id/month_day"
             android:layout_marginBottom="@dimen/normal_vertical_little_margin"
-            android:singleLine="true"
             android:textSize="@dimen/main_list_time_size"
             android:textColor="@color/color_main_time"
             />
