--- a/app/src/main/res/layout/layout_profile.xml
+++ b/app/src/main/res/layout/layout_profile.xml
@@ -6,15 +6,6 @@
     android:background="@color/white"
     android:clickable="true">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/str_tucao"
-        android:textSize="@dimen/main_list_center_title_size"
-        android:textColor="@color/black"/>
-
     <Button
         android:id="@+id/icon_submit"
         android:layout_width="match_parent"
@@ -22,7 +13,9 @@
         android:layout_margin="@dimen/normal_inner_space"
         android:layout_below="@id/title"
         android:gravity="center"
+        android:layout_centerInParent="true"
         android:background="@drawable/selector_save_btn"
-        android:text="@string/str_submit"/>
+        android:text="@string/str_tucao"
+        android:textSize="17sp"/>
 
 </RelativeLayout>
