[bugfix]删除集成进去的微信社交分享,避免百度审核不通过;引导页最后一页,加入点击进入按钮.

--- a/app/src/main/res/layout/guide.xml
+++ b/app/src/main/res/layout/guide.xml
@@ -38,6 +38,18 @@
             android:clickable="true"
             android:layout_gravity="center_vertical"
             android:src="@drawable/point"/>
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_enter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/ll_dot"
+        android:layout_marginBottom="5dp"
+        android:visibility="gone"
+        android:text="@string/str_enter_now"
+        android:textSize="20sp"
+        android:background="@drawable/selector_second_level"/>
 </RelativeLayout>
